# KIS-MSJ

./: .gitignore  README.md  main.py  pyproject.toml
config/: auto_trader.example.json  config_change_history.jsonl  lot_auto_trader.example.json  lot_auto_trader.json  runtime_control.json
docs/: analysis_and_tuning.md  expansion_100_config.md  local_ui.md  market_data_tuning_guide.md  new_season_reset.md  order_cancel_reconciliation.md  performance_loop_tuning.md  portfolio_dashboard.md  project_audit_cleanup_report.md  project_handoff_full.md  project_handoff_summary.md  project_handoff_thread_prompt.md  strategy_lot_sizing.md  today_bootstrap120_runbook.md
examples_user/domestic_stock/: domestic_stock_examples.py  domestic_stock_functions.py
scripts/: benchmark_loop.py  collect_market_data.py  export_analysis_dataset.py  prepare_new_season.py  repair_missing_fill.py
src/kis_msj/: __init__.py  config.py  domestic_quote.py  kis_client.py  kospi_master.py  logger.py  loop_profile.py  lot_manager.py  main.py  models.py  notifier.py  order_manager.py  position_manager.py  price_provider.py  risk_manager.py  runtime_control.py  storage.py  strategy.py  ui_server.py  ui_service.py  (+2 more)
tests/: test_analysis_dataset.py  test_auto_trader_core.py  test_auto_trader_guards.py  test_domestic_quote.py  test_examples_user_domestic_stock.py  test_hourly_logging.py  test_kis_client_errors.py  test_kospi_master.py  test_loop_performance.py  test_lot_strategy.py  test_new_season.py  test_order_reconciliation.py  test_portfolio_dashboard.py  test_sync_repair.py  test_ui_service.py
